[package]
name = "gluglu"
version = "0.1.0"
authors = ["vinhig <vincent.higginson@student.unamur.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["ttf","image","gfx","mixer"]